# CioccoBot

./: LICENSE  README.md
c_stubs/: CMakeLists.txt  SWIGTYPE_p_float.cs  bootstrap  recognition.cpp  recognition.cs  recognition.h  recognition.i  recognitionPINVOKE.cs  recognition_wrap.c  recognition_wrap.cxx  test.cpp
